k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-demo
  labels:
    app.kubernetes.io/name: devsecops-demo
    app.kubernetes.io/part-of: devsecops-demo
